# simple-tuner

./: .gitignore  .metadata  README.md  ffigen.yaml  my_read.cpp  pubspec.yaml  test.cpp
android/: CMakeLists.txt  build.gradle  settings.gradle
android/oboe/: CMakeLists.txt
android/oboe/libs/arm64-v8a/: Makefile
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/sk_guitar_tuner_example/: MainActivity.kt
example/lib/: TunerView.dart  main.dart
lib/: SoundData.dart  sk_guitar_tuner.dart  sk_guitar_tuner_bindings_generated.dart
src/: CMakeLists.txt  audio_recorder.hpp  player.hpp  sk_guitar_tuner.c  sk_guitar_tuner.cpp  sk_guitar_tuner.hpp  sound_data.hpp
